@@ -1,8 +1,8 @@
 noinst_LTLIBRARIES = libforcefields.la
-libforcefields_la_SOURCES = forcefieldmm2.cpp forcefieldghemical.cpp \
+libforcefields_la_SOURCES = forcefieldghemical.cpp \
                             forcefieldmmff94.cpp forcefielduff.cpp
 
 AM_CPPFLAGS = -I$(top_builddir)/include -I$(top_srcdir)/include
 
-EXTRA_DIST = forcefieldmm2.h forcefieldghemical.h forcefieldmmff94.h \
-							forcefielduff.h
+EXTRA_DIST = forcefieldghemical.h forcefieldmmff94.h \
+						forcefielduff.h
