@@ -8,6 +8,9 @@
 	* tools/Makefile.am, tools/obsym.cpp: New tool to detect point
 	group symmetry and eventually write newly "symmetrized" coordinates.
 
+	* src/CMakeLists.txt, src/forcefields/Makefile.*: Update to remove
+	MM2 forcefield from building.
+
 2007-12-03  Tim Vandermeersch <tim.vandermeersch@gmail.com>
 
 	* src/forcefield.cpp, include/openbabel/forcefield.h: Added
